MinQty to Reach-Alignment issues on Port Look up fixed
Workitems:
#33896 Min QTY to Reach - Select port is showing only the first page of Port options from Location master
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C31483

--- a/ShipTech10/app/css/custom.css
+++ b/ShipTech10/app/css/custom.css
@@ -3192,6 +3192,11 @@ Uncomment to see border around all .col-*
                 display: block;
             }
 
+            .modal .dataTableMqtr {
+                height: 400px;
+                overflow: auto;
+                display: block;
+            }
             .ui-jqgrid span.jqgrid-ng-action {
                 margin-left: 0 !important;
             }
